# Axiom

./: package.json  pnpm-lock.yaml
axiom-admin/: package.json  pnpm-lock.yaml  vite.config.ts
axiom-admin/scripts/: firebase_uploader.py
axiom-admin/src/: App.css  App.tsx
axiom-admin/src-tauri/: Cargo.toml  tauri.conf.json
axiom-admin/src-tauri/src/: lib.rs  main.rs
axiom-employee/scripts/: firebase_uploader.py  redact_document.py
axiom-employee/src/: App.css  App.tsx
axiom-employee/src-tauri/: Cargo.toml  tauri.conf.json
axiom-employee/src-tauri/src/: lib.rs  main.rs
public/mediapipe/genai/src-tauri/models/: text-detection.rten  text-recognition.rten
scripts/: paligemma_server.py  pdf_scanner.py  redact_document.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
