[package]
name = "axiom"
version = "0.4.0"
description = "Axiom — Local-first data-leakage prevention (Preview PDF edition)"
authors     = ["Your Name <you@example.com>"]
edition     = "2021"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[dependencies]
tauri              = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-shell = "2"

# Clipboard regex fallback
regex       = "1"
lazy_static = "1"
arboard     = "3"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

tokio   = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
zeroize = { version = "1", features = ["derive"] }

log        = "0.4"
env_logger = "0.11"
thiserror  = "1"
anyhow     = "1"
dirs       = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
