[package]
name = "axiom-admin-lib"
version = "0.1.0"
description = "Axiom Admin — Employer-side management console"
authors     = ["Shrithan Adipuram"]
edition     = "2021"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[dependencies]
tauri              = { version = "2", features = [ "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2.0.0-rc"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

tokio   = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

log        = "0.4"
env_logger = "0.11"
thiserror  = "1"
anyhow     = "1"



[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
